Issue 170: add erogazioni/fruizioni and soggetto parameters to get transazione detail APIs
